// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a 1`] = `
.c0 {
  color: link;
}

<a
  className="c0"
  color="link"
/>
`;

exports[`renders blockquote 1`] = `
.c0 {
  text-align: left;
  font-weight: bold;
  font-size: 16px;
  margin-left: 0px;
  margin-right: 0px;
  padding-left: 0px;
  padding-right: 0px;
  color: quote;
}

<blockquote
  className="c0"
  color="quote"
  fontSize={2}
/>
`;

exports[`renders code 1`] = `
.c0 {
  text-align: left;
  white-space: pre-wrap;
  font-size: 14px;
  margin: 0px;
  padding: 8px;
  color: pre;
  background-color: preBackground;
}

<pre
  className="c0"
  color="pre"
  fontSize={1}
/>
`;

exports[`renders h1 1`] = `
.c0 {
  line-height: 1.25;
  font-size: 24px;
}

<h1
  className="c0"
  fontSize={4}
/>
`;

exports[`renders h2 1`] = `
.c0 {
  line-height: 1.25;
  font-size: 20px;
}

<h2
  className="c0"
  fontSize={3}
/>
`;

exports[`renders h3 1`] = `
.c0 {
  line-height: 1.25;
  font-size: 16px;
}

<h3
  className="c0"
  fontSize={2}
/>
`;

exports[`renders h4 1`] = `
<h4
  className=""
/>
`;

exports[`renders h5 1`] = `
<h5
  className=""
/>
`;

exports[`renders h6 1`] = `
<h6
  className=""
/>
`;

exports[`renders inlineCode 1`] = `
.c0 {
  color: code;
  background-color: codeBackground;
}

<code
  className="c0"
  color="code"
/>
`;

exports[`renders li 1`] = `
<li
  className=""
/>
`;

exports[`renders ol 1`] = `
.c0 {
  text-align: left;
  font-size: 16px;
}

<ol
  className="c0"
  fontSize={2}
/>
`;

exports[`renders p 1`] = `
.c0 {
  font-size: 16px;
}

<p
  className="c0"
  fontSize={2}
/>
`;

exports[`renders table 1`] = `
.c0 {
  overflow-x: auto;
}

.c1 {
  width: 100%;
  border-collapse: separate;
  border-spacing: 0;
}

.c1 td,
.c1 th {
  text-align: left;
  padding-right: .5em;
  padding-top: .25em;
  padding-bottom: .25em;
  border-bottom: 1px solid;
  vertical-align: top;
}

<div
  className="c0"
>
  <table
    className="c1"
  />
</div>
`;

exports[`renders ul 1`] = `
.c0 {
  text-align: left;
  font-size: 16px;
}

<ul
  className="c0"
  fontSize={2}
/>
`;
